@@ -626,4 +626,10 @@ Error: This expression has type < m : 'x. [< `Foo of 'x ] -> 'x >
                      ^^^
 Error: This expression has type M.t but an expression was expected of type 'x
        The type constructor M.t would escape its scope
+#       Characters 37-50:
+  type 'a r = { x: 'b. 'b list as 'a };; (* Should fail? *)
+                       ^^^^^^^^^^^^^
+Error: This type 'b list should be an instance of type 'a
+       The universal variable 'b would escape its scope
+# type 'a r = { x : 'a; } constraint 'a = int list
 # 
