@@ -273,6 +273,8 @@ Bug fixes:
   (Damien Doligez)
 - PR#6672: Unused variance specification allowed in with constraint
 - PR#6744: Univars can escape through polymorphic variants (partial fix)
+* PR#6745: `as` ignored on types containing universal variables
+    (a type error occurs instead of being ignored)
 - PR#6776: Failure to kill the "tick" thread, segfault when exiting the runtime
 - PR#6752: Extensible variant types and scope escaping
 - PR#6808: the parsing of OCAMLRUNPARAM is too lax
